...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="12dp">

            <Button
                android:id="@+id/select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Select"
                android:layout_margin="4dp"
                />

...
                android:layout_height="wrap_content"
                android:text="Get Address"
                android:layout_margin="4dp"
                />

            <Button
                android:id="@+id/delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Delete"
                android:layout_margin="4dp"
                />
        </LinearLayout>
...
